fix: highlight color on dark mode

--- a/src/css/base/_reset.scss
+++ b/src/css/base/_reset.scss
@@ -160,6 +160,10 @@ cite {
 }
 
 .dark {
+  .highlight .hll {
+    background-color: var(--gray-950);
+    color: var(--white);
+  }
 
   .highlight .c { color: #6272a4;} /* Comment */
   .highlight .err { color: #f8f8f2;} /* Error */
